--- a/Tut-08/style.css
+++ b/Tut-08/style.css
@@ -1,6 +1,6 @@
 body{
-    background: url("images/Background.jpg");
-    background-size: cover;
+    background: url("images/bg.jpg");
+    background-size:cover;
 }
 
 
@@ -8,11 +8,13 @@ body{
     display: flex;
     flex-direction: column;
     width: 90%;
-    height: 500px;
+    height: 100%;
     margin: auto;
     margin-top: 12px;
     padding-top: 50px;
-    backdrop-filter: blur(5px);
+    border: 1px solid silver ;
+    border-radius: 12px;
+    backdrop-filter: blur(15px);
 }
 
 h1{
