Getting Started with the links in CSS

--- a/Tut-08/style.css
+++ b/Tut-08/style.css
@@ -1,119 +1,8 @@
-body{
-    background: url("images/bg.jpg");
-    background-size:cover;
-}
 
-
-.wrapper{
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-    height: 100%;
-    margin: auto;
-    margin-top: 12px;
-    padding-top: 50px;
-    border: 1px solid silver ;
-    border-radius: 12px;
-    backdrop-filter: blur(15px);
-}
-
-h1{
-    color: white;
-    text-align: center;
-    border:1px solid white;
-    border-radius: 12px;
-    padding: 30px;
-    margin:50px;
-}
-
-/* Wtite your CSS code here  */
-.container{
-    display: flex;
-    justify-content: center;
-    width: 90%;
-    margin: auto;
-    margin-top: 20px;
-
-    /* background: #ffffff3b; */
-
-}
-
-
-
-.secondary-button
-{
-    width: 80px;
-    padding: 14px 25px;
-    margin: 24px;
-    text-decoration: none;
-    color: white;
-    border: 1px solid #04AA6D;
-    border-radius: 3px;
-}
-
-.secondary-button:hover{
-    width: 80px;
-    margin: 24px;
-    transition-duration: 200ms;
-    background: #04AA6D;
-    color: white;
-}
-
-.primary-button
-{
-    width: 80px;
-    padding: 17px 25px;
-    margin: 24px;
-
-    background: #f44336;
-    text-decoration: none;
-    color:white;
-    border-radius: 3px;
-}
-
-.primary-button:hover
-{
- background-color: #ce0e00;   
-}
-
-
-.caution-button
-{
-    /*Layout CSS*/
-    width: 80px;
-    padding: 17px 25px;
-    text-decoration: none;
-    margin: 24px;
-
-
-    /*Style CSS*/
-    background-color: #f3d449;
-    color: #fff;
-    border-radius: 3px;
-}
-
-.caution-button:hover{
-    /*Styles CSS*/
-    background: none;
-    border: 1px solid #f3d449;
-    color: #fff;
-}
-
-
-/*Material Button Provided by google*/
-.material-button 
-{
-    width: 80px;
-    margin: 24px;
-    padding: 17px 25px;
-
-    color: whitesmoke;
-    background: #6200EE;
-    border-radius: 3px;
-    text-decoration: none;
-}
-
-.material-button:hover{
-    transition-duration: 400ms;
-    background: #4800ac;
-}
+/*
+There are 4 stages of links in HTML 
+:link 
+:visted State  // once the links is visited 
+:hover 
+:active   // When you hold clicked on the link   
+*/
